software-center (1.1.6) UNRELEASED; urgency=low

  [ Michael Vogt ]
  * softwarecenter/view/pendingview.py:
    - fix race in _append_transaction()
  * softwarecenter/view/availablepane.py:
    - fix count of available applications in the status bar
    - append a pathbar element if a search is performed
  * softwarecenter/apt/apthistory.py:
    - add inteface to new /var/log/apt/history.log file

  [ Jonathan Thomas ]
  * Correct dependency on the KDE PolicyKit 1 frontend (policykit-1-qt ->
    policykit-1-kde)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 17 Dec 2009 15:53:28 +0100

software-center (1.1.5) lucid; urgency=low

  * merged from lp:~gary-lasker/software-center/menu-install-remove-fix,
    many thanks!
  * merged lp:~mvo/software-center/sub-categories
  * data/software-center.menu.in, setup.cfg:
    - additional .menu file with custom extensions to structure 
      sub-categories for packages (stub only currently)
    - use new <SCType> tag
  * softwarecenter/view/availablepane.py:
    - if a subcategory list does not have applications, hide the 
      application view
    - make subqueries more flexible
    - reset subcategories if a search is reset
    - support "SCNoDisplay" tag in categories
  * softwarecenter/view/catview.py:
    - move "System Packages" from hardcoded Section into a XML
      file
    - add <Or> support for <Include>
    - support empty queries in .menu
    - support extra tags "SCIcon", "SCNoDisplay"
    - support gettext without directory in .menu file
    - support additional software-center.menu file
  * softwarecenter/view/catview.py:
    - fix incompatibility with the development version of xapian
      (thanks to Richard Boulton)
    - fix <Not> tag handling
    - add SCType that matches 

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 16 Dec 2009 13:41:09 +0100

software-center (1.1.4) lucid; urgency=low

  * softwarecenter/db/update.py:
    - honor X-AppInstall-Ignore=true