@@ -11,9 +11,15 @@ if __name__ == "__main__":
     history = AptHistory()
     for trans in history.transactions:
         print "Date: %s - Count: %s" % (trans.start_date, len(trans))
+        print "".join(history.find_terminal_log(trans.start_date))
+        print
+
+    # read one from a gzip log
+    print history.find_terminal_log("2009-11-04  10:41:22")
 
     # old
     for old in history.older_parts:
         history = AptHistory(old)
         for trans in history.transactions:
             print "older: %s (count: %s)" % (trans.start_date, len(trans))
+
